--- a/content/community/swag.adoc
+++ b/content/community/swag.adoc
@@ -9,22 +9,22 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Official Clojure Gear
 
-The http://www.zazzle.com/clojureappreciation[Clojure Appreciation store] is the only place to get authorized gear. Proceeds go to Rich Hickey, the creator of Clojure.
+The https://www.zazzle.com/clojureappreciation[Clojure Appreciation store] is the only place to get authorized gear. Proceeds go to Rich Hickey, the creator of Clojure.
 
 [[stickers]]
 === Stickers 
 
-image:http://rlv.zcache.com/clojure_stickers_3_sheet_of_6-p217097870517528844en8u1_125.jpg[Clojure Stickers 3&quot; - Sheet of 6,link="http://www.zazzle.com/clojure_stickers_3_sheet_of_6-217097870517528844?rf=238716329365496646"] Clojure Stickers 3" - Sheet of 6
+image:https://rlv.zcache.com/clojure_stickers_3_sheet_of_6-p217097870517528844en8u1_125.jpg[Clojure Stickers 3&quot; - Sheet of 6,link="https://www.zazzle.com/clojure_stickers_3_sheet_of_6-217097870517528844?rf=238716329365496646"] Clojure Stickers 3" - Sheet of 6
 
-image:http://rlv.zcache.com/clojure_stickers_1_5_sheet_of_20-p217379761338416613en8u1_125.jpg[Clojure Stickers 1.5&quot; - Sheet of 20,link="http://www.zazzle.com/clojure_stickers_1_5_sheet_of_20-217379761338416613?rf=238716329365496646"] Clojure Stickers 1.5" - Sheet of 20
+image:https://rlv.zcache.com/clojure_stickers_1_5_sheet_of_20-p217379761338416613en8u1_125.jpg[Clojure Stickers 1.5&quot; - Sheet of 20,link="https://www.zazzle.com/clojure_stickers_1_5_sheet_of_20-217379761338416613?rf=238716329365496646"] Clojure Stickers 1.5" - Sheet of 20
 
-Browse other http://www.zazzle.com/clojure+stickers?rf=238716329365496646[Clojure Stickers] by http://www.zazzle.com/clojureappreciation*[ClojureAppreciation].
+Browse other https://www.zazzle.com/clojure+stickers?rf=238716329365496646[Clojure Stickers] by https://www.zazzle.com/clojureappreciation[ClojureAppreciation].
 
 === T Shirts
 
 +Note: You can customize the color and shirt style, get hoodies, jerseys etc. If ordering a light shirt you'll need to set the font color to something dark.+
 
-image:https://rlv.zcache.com/clojure_t_large_logo_t_shirt-raf7c54b4b4ec4537afd1e5cb1824168d_joa8u_324.jpg[Clojure T, Large Logo,link="http://www.zazzle.com/clojure_t_large_logo-235776431459512494?rf=238716329365496646"] Clojure T, Large Logo
+image:https://rlv.zcache.com/clojure_t_large_logo_t_shirt-raf7c54b4b4ec4537afd1e5cb1824168d_joa8u_324.jpg[Clojure T, Large Logo,link="https://www.zazzle.com/clojure_t_large_logo-235776431459512494?rf=238716329365496646"] Clojure T, Large Logo
 
-image:https://rlv.zcache.com/clojure_t_small_logo_t_shirt-rda2f449605144baf8631399aa19d8c63_joa8u_324.jpg[Clojure T, Small Logo,link="http://www.zazzle.com/clojure_t_small_logo-235264388339470561?rf=238716329365496646"] Clojure T, Small Logo
+image:https://rlv.zcache.com/clojure_t_small_logo_t_shirt-rda2f449605144baf8631399aa19d8c63_joa8u_324.jpg[Clojure T, Small Logo,link="https://www.zazzle.com/clojure_t_small_logo-235264388339470561?rf=238716329365496646"] Clojure T, Small Logo
 
