--- a/content/news/2023/10/23/deref.adoc
+++ b/content/news/2023/10/23/deref.adoc
@@ -27,6 +27,7 @@ https://clojure.org/news/2023/10/20/clojure-1-12-alpha5[Clojure 1.12.0-alpha5] i
 
 * https://jank-lang.org/blog/2023-10-14-module-loading/[jank development update - Module loading] - Jeaye Wilkerson
 * https://flexiana.com/2023/10/clojure-in-2024[The Growth of Clojure: 2023 Review and 2024 Projections] - Marek Rinko (Flexiana)
+* https://minerepl.com[Learn Programming in 3D Environment] - Ertugrul Cetin
 
 == Libraries and Tools
 
