--- a/content/releases/downloads_older.adoc
+++ b/content/releases/downloads_older.adoc
@@ -9,15 +9,15 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Older Clojure Releases
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.11.1/[Clojure 1.11.1] (Apr, 2022)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.11.0/[Clojure 1.11.0] (Mar, 2022)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.3/[Clojure 1.10.3] (Mar, 2021)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.2/[Clojure 1.10.2] (Jan, 2021)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.1/[Clojure 1.10.1] (Jun, 2019)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0/[Clojure 1.10.0] (Dec, 2018)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0/[Clojure 1.9.0] (Dec, 2017)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/[Clojure 1.8.0] (Jan, 2016)
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.7.0/[Clojure 1.7.0] (Jun, 2015)
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.11.1/[Clojure 1.11.1] (Apr, 2022) - https://clojure.org/news/2022/04/05/clojure-1-11-1[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.11.0/[Clojure 1.11.0] (Mar, 2022) - https://clojure.org/news/2022/03/22/clojure-1-11-0[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.3/[Clojure 1.10.3] (Mar, 2021) - https://clojure.org/news/2021/03/04/clojure1-10-3[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.2/[Clojure 1.10.2] (Jan, 2021) - https://clojure.org/news/2021/01/26/clojure1-10-2[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.1/[Clojure 1.10.1] (Jun, 2019) - https://clojure.org/news/2019/06/06/clojure1-10-1[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0/[Clojure 1.10.0] (Dec, 2018) - https://clojure.org/news/2018/12/17/clojure110[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0/[Clojure 1.9.0] (Dec, 2017) - https://clojure.org/news/2017/12/08/clojure19[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/[Clojure 1.8.0] (Jan, 2016) - https://clojure.org/news/2016/01/19/clojure18[release notes]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.7.0/[Clojure 1.7.0] (Jun, 2015) - https://clojure.org/news/2015/06/30/clojure-17[release notes]
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.6.0/[Clojure 1.6.0] (Mar, 2014)
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.5.1/[Clojure 1.5.1] (Mar, 2013)
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.4.0/[Clojure 1.4.0] (Apr, 2012)
