--- a/content/news/2023/12/01/deref.adoc
+++ b/content/news/2023/12/01/deref.adoc
@@ -12,7 +12,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://clojuredesign.club/episode/101-sportify/[Ep 101: Sportify!] - Functional Design in Clojure
 * https://www.youtube.com/watch?v=y2zvQDpgMak[Writing Maintainable Clojure Applications (by Dmitri Sotnikov)] - London Clojurians
 * https://www.youtube.com/watch?v=fU0nIJ1dNsw[Building web apps with Clojure] - OrgPad
-* https://www.youtube.com/watch?v=-P_ujmp5EcE[ow to use loop/recur in Clojure: with a practical example!] - Andrey Fadeev
+* https://www.youtube.com/watch?v=-P_ujmp5EcE[How to use loop/recur in Clojure: with a practical example!] - Andrey Fadeev
 * https://www.youtube.com/watch?v=bqA250jqMTg[Firebase storage with ClojureScript (+ Re-Frame)] - on the code again
 * https://www.youtube.com/watch?v=_2PBcVv210g[Project kickoff :: Advent of Clojure] - Roman Liutikov
 * https://www.youtube.com/watch?v=WstfIpMiMwM[lead. A blogging system in Clojure, and other Clojure adventures] - Clojure Diary
