add new book, closes #677

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://images-na.ssl-images-amazon.com/images/I/617Sl1uORgL._SL160.jpg[Functional Design: Principles, Patterns, and Practices,link="https://a.co/d/b1NrzDU",width="130"]
+| https://a.co/d/b1NrzDU[Functional Design: Principles, Patterns, and Practices] +
+by Robert C. Martin +
+Sep 21, 2023
+
 | image::https://clojure-book.gitlab.io/images/clojure-book-cover-2001-space-odyssey-10.png[Clojure,link="https://clojure-book.gitlab.io/",width="130"]
 | https://clojure-book.gitlab.io/[Clojure] +
 by Karthikeyan A K +
