add tools release

--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1420 (Dec 4, 2023) [[v1.11.1.1420]]
+
+* https://clojure.atlassian.net/browse/TDEPS-119[TDEPS-119] Unable to start CLI in write-protected project directory
+* https://clojure.atlassian.net/browse/TDEPS-256[TDEPS-256] create-basis - when different project dir is specified, should be used to resolve relative local deps
+* Update all dependencies to latest versions
+
 === 1.11.1.1413 (Aug 26, 2023) [[v1.11.1.1413]]
 
 * No changes
